Compiler/Compiler/parser.output
Terminals unused in grammar

    IF
    ELSE
    WHILE
    RETURN
    COMMA
    OPEN_BRACE
    CLOSE_BRACE


Grammar

    0 $accept: Program $end

    1 Program: StmtList

    2 StmtList: ε
    3         | Stmt StmtList

    4 Stmt: Declaration
    5     | Assignment
    6     | Print

    7 Declaration: Type ID SEMICOLON

    8 Type: INT
    9     | FLOAT

   10 Assignment: ID ASSIGN Expr SEMICOLON

   11 Print: PRINT OPEN_PAREN Expr CLOSE_PAREN SEMICOLON

   12 Expr: Expr PLUS Term
   13     | Expr MINUS Term
   14     | Term

   15 Term: Term MULT Factor
   16     | Term DIV Factor
   17     | Factor

   18 Factor: OPEN_PAREN Expr CLOSE_PAREN
   19       | ID
   20       | NUMBER


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    ID <string> (258) 7 10 19
    INT <string> (259) 8
    FLOAT <string> (260) 9
    PRINT <string> (261) 11
    IF <string> (262)
    ELSE <string> (263)
    WHILE <string> (264)
    RETURN <string> (265)
    SEMICOLON <character> (266) 7 10 11
    COMMA <character> (267)
    OPEN_PAREN <character> (268) 11 18
    OPEN_BRACE <character> (269)
    CLOSE_BRACE <character> (270)
    CLOSE_PAREN <character> (271) 11 18
    ASSIGN <op> (272) 10
    PLUS <op> (273) 12
    MINUS <op> (274) 13
    MULT <op> (275) 15
    DIV <op> (276) 16
    NUMBER <number> (277) 20


Nonterminals, with rules where they appear

    $accept (23)
        on left: 0
    Program <node> (24)
        on left: 1
        on right: 0
    StmtList <node> (25)
        on left: 2 3
        on right: 1 3
    Stmt <node> (26)
        on left: 4 5 6
        on right: 3
    Declaration <node> (27)
        on left: 7
        on right: 4
    Type <node> (28)
        on left: 8 9
        on right: 7
    Assignment <node> (29)
        on left: 10
        on right: 5
    Print <node> (30)
        on left: 11
        on right: 6
    Expr <node> (31)
        on left: 12 13 14
        on right: 10 11 12 13 18
    Term <node> (32)
        on left: 15 16 17
        on right: 12 13 14 15 16
    Factor <node> (33)
        on left: 18 19 20
        on right: 15 16 17


State 0

    0 $accept: • Program $end

    ID     shift, and go to state 1
    INT    shift, and go to state 2
    FLOAT  shift, and go to state 3
    PRINT  shift, and go to state 4

    $default  reduce using rule 2 (StmtList)

    Program      go to state 5
    StmtList     go to state 6
    Stmt         go to state 7
    Declaration  go to state 8
    Type         go to state 9
    Assignment   go to state 10
    Print        go to state 11


State 1

   10 Assignment: ID • ASSIGN Expr SEMICOLON

    ASSIGN  shift, and go to state 12


State 2

    8 Type: INT •

    $default  reduce using rule 8 (Type)


State 3

    9 Type: FLOAT •

    $default  reduce using rule 9 (Type)


State 4

   11 Print: PRINT • OPEN_PAREN Expr CLOSE_PAREN SEMICOLON

    OPEN_PAREN  shift, and go to state 13


State 5

    0 $accept: Program • $end

    $end  shift, and go to state 14


State 6

    1 Program: StmtList •

    $default  reduce using rule 1 (Program)


State 7

    3 StmtList: Stmt • StmtList

    ID     shift, and go to state 1
    INT    shift, and go to state 2
    FLOAT  shift, and go to state 3
    PRINT  shift, and go to state 4

    $default  reduce using rule 2 (StmtList)

    StmtList     go to state 15
    Stmt         go to state 7
    Declaration  go to state 8
    Type         go to state 9
    Assignment   go to state 10
    Print        go to state 11


State 8

    4 Stmt: Declaration •

    $default  reduce using rule 4 (Stmt)


State 9

    7 Declaration: Type • ID SEMICOLON

    ID  shift, and go to state 16


State 10

    5 Stmt: Assignment •

    $default  reduce using rule 5 (Stmt)


State 11

    6 Stmt: Print •

    $default  reduce using rule 6 (Stmt)


State 12

   10 Assignment: ID ASSIGN • Expr SEMICOLON

    ID          shift, and go to state 17
    OPEN_PAREN  shift, and go to state 18
    NUMBER      shift, and go to state 19

    Expr    go to state 20
    Term    go to state 21
    Factor  go to state 22


State 13

   11 Print: PRINT OPEN_PAREN • Expr CLOSE_PAREN SEMICOLON

    ID          shift, and go to state 17
    OPEN_PAREN  shift, and go to state 18
    NUMBER      shift, and go to state 19

    Expr    go to state 23
    Term    go to state 21
    Factor  go to state 22


State 14

    0 $accept: Program $end •

    $default  accept


State 15

    3 StmtList: Stmt StmtList •

    $default  reduce using rule 3 (StmtList)


State 16

    7 Declaration: Type ID • SEMICOLON

    SEMICOLON  shift, and go to state 24


State 17

   19 Factor: ID •

    $default  reduce using rule 19 (Factor)


State 18

   18 Factor: OPEN_PAREN • Expr CLOSE_PAREN

    ID          shift, and go to state 17
    OPEN_PAREN  shift, and go to state 18
    NUMBER      shift, and go to state 19

    Expr    go to state 25
    Term    go to state 21
    Factor  go to state 22


State 19

   20 Factor: NUMBER •

    $default  reduce using rule 20 (Factor)


State 20

   10 Assignment: ID ASSIGN Expr • SEMICOLON
   12 Expr: Expr • PLUS Term
   13     | Expr • MINUS Term

    SEMICOLON  shift, and go to state 26
    PLUS       shift, and go to state 27
    MINUS      shift, and go to state 28


State 21

   14 Expr: Term •
   15 Term: Term • MULT Factor
   16     | Term • DIV Factor

    MULT  shift, and go to state 29
    DIV   shift, and go to state 30

    $default  reduce using rule 14 (Expr)


State 22

   17 Term: Factor •

    $default  reduce using rule 17 (Term)


State 23

   11 Print: PRINT OPEN_PAREN Expr • CLOSE_PAREN SEMICOLON
   12 Expr: Expr • PLUS Term
   13     | Expr • MINUS Term

    CLOSE_PAREN  shift, and go to state 31
    PLUS         shift, and go to state 27
    MINUS        shift, and go to state 28


State 24

    7 Declaration: Type ID SEMICOLON •

    $default  reduce using rule 7 (Declaration)


State 25

   12 Expr: Expr • PLUS Term
   13     | Expr • MINUS Term
   18 Factor: OPEN_PAREN Expr • CLOSE_PAREN

    CLOSE_PAREN  shift, and go to state 32
    PLUS         shift, and go to state 27
    MINUS        shift, and go to state 28


State 26

   10 Assignment: ID ASSIGN Expr SEMICOLON •

    $default  reduce using rule 10 (Assignment)


State 27

   12 Expr: Expr PLUS • Term

    ID          shift, and go to state 17
    OPEN_PAREN  shift, and go to state 18
    NUMBER      shift, and go to state 19

    Term    go to state 33
    Factor  go to state 22


State 28

   13 Expr: Expr MINUS • Term

    ID          shift, and go to state 17
    OPEN_PAREN  shift, and go to state 18
    NUMBER      shift, and go to state 19

    Term    go to state 34
    Factor  go to state 22


State 29

   15 Term: Term MULT • Factor

    ID          shift, and go to state 17
    OPEN_PAREN  shift, and go to state 18
    NUMBER      shift, and go to state 19

    Factor  go to state 35


State 30

   16 Term: Term DIV • Factor

    ID          shift, and go to state 17
    OPEN_PAREN  shift, and go to state 18
    NUMBER      shift, and go to state 19

    Factor  go to state 36


State 31

   11 Print: PRINT OPEN_PAREN Expr CLOSE_PAREN • SEMICOLON

    SEMICOLON  shift, and go to state 37


State 32

   18 Factor: OPEN_PAREN Expr CLOSE_PAREN •

    $default  reduce using rule 18 (Factor)


State 33

   12 Expr: Expr PLUS Term •
   15 Term: Term • MULT Factor
   16     | Term • DIV Factor

    MULT  shift, and go to state 29
    DIV   shift, and go to state 30

    $default  reduce using rule 12 (Expr)


State 34

   13 Expr: Expr MINUS Term •
   15 Term: Term • MULT Factor
   16     | Term • DIV Factor

    MULT  shift, and go to state 29
    DIV   shift, and go to state 30

    $default  reduce using rule 13 (Expr)


State 35

   15 Term: Term MULT Factor •

    $default  reduce using rule 15 (Term)


State 36

   16 Term: Term DIV Factor •

    $default  reduce using rule 16 (Term)


State 37

   11 Print: PRINT OPEN_PAREN Expr CLOSE_PAREN SEMICOLON •

    $default  reduce using rule 11 (Print)
